2009-09-07 Ivan Kartolo <ivan.kartolo@dkd.de>
	* fixed bug #11809 (bugs): category labels need to be passed through htmlspecialchars.
	* fixed bug #3201 (forge): user edit link in statistic module is not functioning. 
	* updated documentation
	
2009-08-27 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #4365(forge): Filter the sysfolder, which the user has as import destination (thanks to Robert Heel)

2009-08-22 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed Bug #4304(forge): wrong charset detection if selecting external page as source

2009-08-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* New Feature #3896(forge): added new field (module_sys_dmail_newsletter) in fe_user table to en-/disable newsletter without deleting the user (thanks to Sonja Scholz <ss@cabag.ch> for implementing this)
	* New feature #3896(forge): recipient list is also updated to only show fe_user which has module_sys_dmail_newsletter flag
	
2009-08-5 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug: PID of the recipient list should not be check when fetching the recipient.
	* Fixed bug: using trimExplode on exploding the list of fields (while replacing the marker in newsletter)
	
2009-07-19 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug: label in mailer engine.

2009-07-15 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Feature: crop mail subject after 100 chars in Mailing Engine.
	* Feature: Delete icon for existing direct mail.
	* Feature: Edit icon opens editing form in new window
	* Feature: added direct_mail_123 in the conflict lists

2009-07-14 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Cleaning #3598(forge): code cleaning (thanks to Benjamin Mack)
	* Fixed bug #3599(forge): code cleaning. Added hook to manipulate personalized marker (thanks to Benjamin Mack)

2009-05-16 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Added CLI-script to automatically invoking the mass sending
	* Documentation is updated
	* Show preview icon based on format of mail content (see configuration)