@@ -43,3 +43,6 @@ SmtpPassword =
   # cat=basic/enable; type=boolean; label=SMTP persistent connection: Activate if you want to use a persistent connection while sending direct mails, only used when sending through SMTP is enabled (see above)
 SmtpPersistent = 0
 
+  # cat=basic/enable; type=boolean; label=Use http connection for fetching Newsletter-Content: Even if your TYPO3 Backend is in SSL-Mode, the URL for fetching the NEwsletter-Conts will be http
+UseHttpToFetch = 0
+
