@@ -1,3 +1,7 @@
+2009-09-17 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* fixed typo in marker substitution hook
+	* fixed bug #4222 (forge): added configuration always to fetch through http, although BE is on SSL (thanks to Ingo Schmitt)
+
 2009-09-07 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* fixed bug #11809 (bugs): category labels need to be passed through htmlspecialchars.
 	* fixed bug #3201 (forge): user edit link in statistic module is not functioning. 
